// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exactly > allows Object.is equality where deep equality would normally be used 1`] = `
expected "spy" to be called with arguments: [ exactly<Object {}> ][90m

Received: 

<b>  1st spy call:

</b><d>  [</b>
<g>-   exactly<Object {}>,[90m
<r>+   {},[90m
<d>  ]</b>
</g>[90m

Number of calls: <b>1</b>
</g>
`;

exports[`exactly > allows Object.is equality where deep equality would normally be used 2`] = `
expected "spy" to be called with arguments: [ not.exactly<Object {}> ][90m

Received: 

<b>  1st spy call:

</b><d>  [</b>
<g>-   not.exactly<Object {}>,[90m
<r>+   {},[90m
<d>  ]</b>
</g>[90m

Number of calls: <b>1</b>
</g>
`;
